--- a/ch16/guestbook.html
+++ b/ch16/guestbook.html
@@ -7,13 +7,13 @@
 <body>
     <h1>Guestbook</h1>
     <div>
-        X total signatures -
+        {{.SignatureCount}} total signatures -
         <a href="/guestbook/add">Add Your Signature</a>
     </div>
     <div>
-        <p>Signatures</p>
-        <p>go</p>
-        <p>here</p>
+        {{range .Signatures}}
+        <p>{{.}}</p>
+        {{end}}
     </div>
 </body>
 </html>
